# icon-packer

./: .gitignore  Cargo.toml  README.md
qml/: StyledComponents.qml  about_sheet.qml  generate_dialog.qml  icon_details_sheet.qml  main.qml  main_page.qml  new_project_dialog.qml  project_settings_dialog.qml  welcome_page.qml
src/: icon_catalog.rs  icon_model.rs  icon_theme.rs  main.rs  project.rs  project_manager.rs  theme_generator.rs  theme_manager.rs
