[package]
name = "icon-packer"
version = "0.1.0"
authors = ["vaporvee <yannik@vaporvee.com>"]
edition = "2021"

[dependencies]
qmetaobject = "0.2"
cstr = "0.2"
log = "0.4"
env_logger = "0.9"
anyhow = "1"
thiserror = "1"
walkdir = "2"
configparser = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
